--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ import ShareButton from "../components/ShareButton.jsx"; // Importar el componen
       <!-- Imagen del doctor centrada -->
       <div class="mb-4">
         <img
-          src="/public/portrait.jpeg"
+          src="/public/images/portrait.jpeg"
           alt="Doctor"
           class="w-48 h-48 mx-auto rounded-full"
         />
@@ -44,7 +44,7 @@ import ShareButton from "../components/ShareButton.jsx"; // Importar el componen
           class="flex flex-col items-center"
         >
           <img
-            src="/public/001-facebook.png"
+            src="/public/images/001-facebook.png"
             alt="Facebook"
             class="w-20 h-20"
           />
@@ -56,7 +56,7 @@ import ShareButton from "../components/ShareButton.jsx"; // Importar el componen
           class="flex flex-col items-center"
         >
           <img
-            src="/public/002-linkedin.png"
+            src="/public/images/002-linkedin.png"
             alt="LinkedIn"
             class="w-20 h-20"
           />
@@ -68,7 +68,7 @@ import ShareButton from "../components/ShareButton.jsx"; // Importar el componen
           class="flex flex-col items-center"
         >
           <img
-            src="/public/003-telegrama.png"
+            src="/public/images/003-telegrama.png"
             alt="Telegram"
             class="w-20 h-20"
           />
@@ -79,7 +79,11 @@ import ShareButton from "../components/ShareButton.jsx"; // Importar el componen
           target="_blank"
           class="flex flex-col items-center"
         >
-          <img src="/public/004-gmail.png" alt="Gmail" class="w-20 h-20" />
+          <img
+            src="/public/images/004-gmail.png"
+            alt="Gmail"
+            class="w-20 h-20"
+          />
           <p class="mt-2">Gmail</p>
         </a>
         <a
@@ -88,7 +92,7 @@ import ShareButton from "../components/ShareButton.jsx"; // Importar el componen
           class="flex flex-col items-center"
         >
           <img
-            src="/public/005-instagram.png"
+            src="/public/images/005-instagram.png"
             alt="Instagram"
             class="w-20 h-20"
           />
@@ -99,7 +103,11 @@ import ShareButton from "../components/ShareButton.jsx"; // Importar el componen
           target="_blank"
           class="flex flex-col items-center"
         >
-          <img src="/public/006-gorjeo.png" alt="Twitter" class="w-20 h-20" />
+          <img
+            src="/public/images/006-gorjeo.png"
+            alt="Twitter"
+            class="w-20 h-20"
+          />
           <p class="mt-2">Twitter</p>
         </a>
         <a
@@ -107,7 +115,11 @@ import ShareButton from "../components/ShareButton.jsx"; // Importar el componen
           target="_blank"
           class="flex flex-col items-center"
         >
-          <img src="/public/whatsapp.png" alt="WhatsApp" class="w-20 h-20" />
+          <img
+            src="/public/images/whatsapp.png"
+            alt="WhatsApp"
+            class="w-20 h-20"
+          />
           <p class="mt-2">WhatsApp</p>
         </a>
       </div>
