Cambio de path a imágenes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ import ShareButton from "../components/ShareButton.jsx"; // Importar el componen
       <!-- Imagen del doctor centrada -->
       <div class="mb-4">
         <img
-          src="/public/images/portrait.jpeg"
+          src="images/portrait.jpeg"
           alt="Doctor"
           class="w-48 h-48 mx-auto rounded-full"
         />
@@ -43,11 +43,7 @@ import ShareButton from "../components/ShareButton.jsx"; // Importar el componen
           target="_blank"
           class="flex flex-col items-center"
         >
-          <img
-            src="/public/images/001-facebook.png"
-            alt="Facebook"
-            class="w-20 h-20"
-          />
+          <img src="images/001-facebook.png" alt="Facebook" class="w-20 h-20" />
           <p class="mt-2">Facebook</p>
         </a>
         <a
@@ -55,11 +51,7 @@ import ShareButton from "../components/ShareButton.jsx"; // Importar el componen
           target="_blank"
           class="flex flex-col items-center"
         >
-          <img
-            src="/public/images/002-linkedin.png"
-            alt="LinkedIn"
-            class="w-20 h-20"
-          />
+          <img src="images/002-linkedin.png" alt="LinkedIn" class="w-20 h-20" />
           <p class="mt-2">LinkedIn</p>
         </a>
         <a
@@ -68,7 +60,7 @@ import ShareButton from "../components/ShareButton.jsx"; // Importar el componen
           class="flex flex-col items-center"
         >
           <img
-            src="/public/images/003-telegrama.png"
+            src="images/003-telegrama.png"
             alt="Telegram"
             class="w-20 h-20"
           />
@@ -79,11 +71,7 @@ import ShareButton from "../components/ShareButton.jsx"; // Importar el componen
           target="_blank"
           class="flex flex-col items-center"
         >
-          <img
-            src="/public/images/004-gmail.png"
-            alt="Gmail"
-            class="w-20 h-20"
-          />
+          <img src="images/004-gmail.png" alt="Gmail" class="w-20 h-20" />
           <p class="mt-2">Gmail</p>
         </a>
         <a
@@ -92,7 +80,7 @@ import ShareButton from "../components/ShareButton.jsx"; // Importar el componen
           class="flex flex-col items-center"
         >
           <img
-            src="/public/images/005-instagram.png"
+            src="images/005-instagram.png"
             alt="Instagram"
             class="w-20 h-20"
           />
@@ -103,11 +91,7 @@ import ShareButton from "../components/ShareButton.jsx"; // Importar el componen
           target="_blank"
           class="flex flex-col items-center"
         >
-          <img
-            src="/public/images/006-gorjeo.png"
-            alt="Twitter"
-            class="w-20 h-20"
-          />
+          <img src="images/006-gorjeo.png" alt="Twitter" class="w-20 h-20" />
           <p class="mt-2">Twitter</p>
         </a>
         <a
@@ -115,11 +99,7 @@ import ShareButton from "../components/ShareButton.jsx"; // Importar el componen
           target="_blank"
           class="flex flex-col items-center"
         >
-          <img
-            src="/public/images/whatsapp.png"
-            alt="WhatsApp"
-            class="w-20 h-20"
-          />
+          <img src="images/whatsapp.png" alt="WhatsApp" class="w-20 h-20" />
           <p class="mt-2">WhatsApp</p>
         </a>
       </div>
