--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ import ShareButton from "../components/ShareButton.jsx"; // Importar el componen
       <!-- Imagen del doctor centrada -->
       <div class="mb-4">
         <img
-          src="/public/images/portrait.jpeg"
+          src="images/portrait.jpeg"
           alt="Doctor"
           class="w-48 h-48 mx-auto rounded-full"
         />
