--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,9 @@
 ---
 import ShareButton from "../components/ShareButton.jsx"; // Importar el componente de React desde la carpeta "components"
+
+title: "Título de tu página";
+description: "Descripción de tu página";
+layout: "../layouts/Layout.astro";
 ---
 
 <html lang="es">
