--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import ShareButton from "../components/ShareButton.jsx"; // Importar el componente de React desde la carpeta "components"
+import ShareButton from "../components/ShareButton.jsx";
 
 title: "Título de tu página";
 description: "Descripción de tu página";
@@ -16,18 +16,14 @@ layout: "../layouts/Layout.astro";
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
-    <!-- Font Awesome -->
   </head>
   <body
     class="bg-gray-100 text-gray-800 dark:bg-gray-800 dark:text-gray-200 flex flex-col items-center justify-center min-h-screen"
   >
     <div class="absolute top-4 right-4">
-      <!-- Botón de compartir -->
       <ShareButton client:load />
     </div>
-    <!-- Contenedor Principal -->
     <div class="text-center pt-5">
-      <!-- Imagen del doctor centrada -->
       <div class="mb-4">
         <img
           src="images/portrait.jpeg"
@@ -36,11 +32,9 @@ layout: "../layouts/Layout.astro";
         />
       </div>
 
-      <!-- Nombre y descripción centrados -->
       <h1 class="text-4xl font-bold mb-2">Dr. Guillermo Terrado</h1>
       <p class="text-lg mb-6">Medicina Reproductiva</p>
 
-      <!-- Redes Sociales centradas y distribuidas en varias filas -->
       <div class="flex flex-wrap justify-center gap-6 max-w-md mx-auto">
         <a
           href="https://www.facebook.com/drterrado"
