Añadido margen a la clase del cuerpo en index.astro para mejorar el espaciado

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ layout: "../layouts/Layout.astro";
   </head>
 
   <body
-    class="bg-gray-100 text-gray-800 dark:bg-gray-800 dark:text-gray-200 flex flex-col items-center justify-center min-h-screen"
+    class="bg-gray-100 text-gray-800 dark:bg-gray-800 dark:text-gray-200 flex flex-col items-center justify-center min-h-screen m-6"
   >
     <div class="absolute top-4 right-4">
       <ShareButton client:load />
