--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,7 +43,7 @@ layout: "../layouts/Layout.astro";
           class="flex flex-col items-center"
         >
           <img src="images/002-linkedin.png" alt="LinkedIn" class="w-20 h-20" />
-          <p class="mt-2">LinkedIn</p>
+          <p class="mt-2 hover:opacity-60">LinkedIn</p>
         </a>
 
         <a
@@ -56,7 +56,7 @@ layout: "../layouts/Layout.astro";
             alt="Instagram"
             class="w-20 h-20"
           />
-          <p class="mt-2">Instagram</p>
+          <p class="mt-2 hover:opacity-60">Instagram</p>
         </a>
 
         <a
@@ -65,7 +65,7 @@ layout: "../layouts/Layout.astro";
           class="flex flex-col items-center"
         >
           <img src="images/001-facebook.png" alt="Facebook" class="w-20 h-20" />
-          <p class="mt-2">Facebook</p>
+          <p class="mt-2 hover:opacity-60">Facebook</p>
         </a>
 
         <a
@@ -74,7 +74,7 @@ layout: "../layouts/Layout.astro";
           class="flex flex-col items-center"
         >
           <img src="images/004-gmail.png" alt="Gmail" class="w-20 h-20" />
-          <p class="mt-2">Gmail</p>
+          <p class="mt-2 hover:opacity-60">Gmail</p>
         </a>
 
         <a
@@ -83,7 +83,7 @@ layout: "../layouts/Layout.astro";
           class="flex flex-col items-center"
         >
           <img src="images/whatsapp.png" alt="WhatsApp" class="w-20 h-20" />
-          <p class="mt-2">WhatsApp</p>
+          <p class="mt-2 hover:opacity-60">WhatsApp</p>
         </a>
 
         <a
@@ -94,7 +94,7 @@ layout: "../layouts/Layout.astro";
           <img
             src="images/003-telegrama.png"
             alt="Telegram"
-            class="w-20 h-20"
+            class="w-20 h-20 hover:opacity-60"
           />
           <p class="mt-2">Telegram</p>
         </a>
@@ -105,7 +105,7 @@ layout: "../layouts/Layout.astro";
           class="flex flex-col items-center"
         >
           <img src="images/006-gorjeo.png" alt="Twitter" class="w-20 h-20" />
-          <p class="mt-2">Twitter</p>
+          <p class="mt-2 hover:opacity-60">Twitter</p>
         </a>
       </div>
     </div>
