Añadido efecto de transición al pasar el ratón sobre los enlaces de redes sociales en index.astro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,61 +40,61 @@ layout: "../layouts/Layout.astro";
         <a
           href="https://www.linkedin.com/in/drterrado/"
           target="_blank"
-          class="flex flex-col items-center"
+          class="flex flex-col items-center transition hover-effect"
         >
           <img src="images/002-linkedin.png" alt="LinkedIn" class="w-20 h-20" />
-          <p class="mt-2 hover:opacity-60">LinkedIn</p>
+          <p class="mt-2">LinkedIn</p>
         </a>
 
         <a
           href="https://www.instagram.com/drterrado"
           target="_blank"
-          class="flex flex-col items-center"
+          class="flex flex-col items-center transition hover-effect"
         >
           <img
             src="images/005-instagram.png"
             alt="Instagram"
             class="w-20 h-20"
           />
-          <p class="mt-2 hover:opacity-60">Instagram</p>
+          <p class="mt-2">Instagram</p>
         </a>
 
         <a
           href="https://www.facebook.com/drterrado"
           target="_blank"
-          class="flex flex-col items-center"
+          class="flex flex-col items-center transition hover-effect"
         >
           <img src="images/001-facebook.png" alt="Facebook" class="w-20 h-20" />
-          <p class="mt-2 hover:opacity-60">Facebook</p>
+          <p class="mt-2">Facebook</p>
         </a>
 
         <a
           href="mailto:dr.guillermoterrado@gmail.com"
           target="_blank"
-          class="flex flex-col items-center"
+          class="flex flex-col items-center transition hover-effect"
         >
           <img src="images/004-gmail.png" alt="Gmail" class="w-20 h-20" />
-          <p class="mt-2 hover:opacity-60">Gmail</p>
+          <p class="mt-2">Gmail</p>
         </a>
 
         <a
           href="https://api.whatsapp.com/send/?phone=34644401122&text&type=phone_number&app_absent=0"
           target="_blank"
-          class="flex flex-col items-center"
+          class="flex flex-col items-center transition hover-effect"
         >
           <img src="images/whatsapp.png" alt="WhatsApp" class="w-20 h-20" />
-          <p class="mt-2 hover:opacity-60">WhatsApp</p>
+          <p class="mt-2">WhatsApp</p>
         </a>
 
         <a
           href="https://t.me/drterrado"
           target="_blank"
-          class="flex flex-col items-center"
+          class="flex flex-col items-center transition hover-effect"
         >
           <img
             src="images/003-telegrama.png"
             alt="Telegram"
-            class="w-20 h-20 hover:opacity-60"
+            class="w-20 h-20"
           />
           <p class="mt-2">Telegram</p>
         </a>
@@ -102,10 +102,10 @@ layout: "../layouts/Layout.astro";
         <a
           href="https://x.com/drterrado"
           target="_blank"
-          class="flex flex-col items-center"
+          class="flex flex-col items-center transition hover-effect"
         >
           <img src="images/006-gorjeo.png" alt="Twitter" class="w-20 h-20" />
-          <p class="mt-2 hover:opacity-60">Twitter</p>
+          <p class="mt-2">Twitter</p>
         </a>
       </div>
     </div>
